finished JS for caculator

--- a/index.html
+++ b/index.html
@@ -12,28 +12,27 @@
       <div class="calc">
         <div class="container">
           <div class="screen">
-            <p class="math">0</p>
-            <p class="answer"></p>
+            <p class="previousScreen"></p>
+            <p class="currentScreen">0</p>
           </div>
           <div class="keys">
-            <button>AC</button>
-            <button onclick="clearScreen()">C</button>
-            <button>%</button>
-            <button class="divide" onclick="updateScreen('/')">/</button>
-            <button onclick="updateScreen(7)">7</button>
-            <button onclick="updateScreen(8)">8</button>
-            <button onclick="updateScreen(9)">9</button>
-            <button class="add" onclick="updateScreen('+')">+</button>
-            <button onclick="updateScreen(4)">4</button>
-            <button onclick="updateScreen(5)">5</button>
-            <button onclick="updateScreen(6)">6</button>
-            <button class="subtract" onclick="updateScreen('-')">-</button>
-            <button onclick="updateScreen(1)">1</button>
-            <button onclick="updateScreen(2)">2</button>
-            <button onclick="updateScreen(3)">3</button>
-            <button class="multiply" onclick="updateScreen('x')">x</button>
-            <button onclick="updateScreen(0)">0</button>
-            <button onclick="updateScreen('.')">.</button>
+            <button class="bigbutt clear">C</button>
+            <button class="back">back</button>
+            <button class="operator">/</button>
+            <button class="number">7</button>
+            <button class="number">8</button>
+            <button class="number">9</button>
+            <button class="operator">+</button>
+            <button class="number">4</button>
+            <button class="number">5</button>
+            <button class="number">6</button>
+            <button class="operator">-</button>
+            <button class="number">1</button>
+            <button class="number">2</button>
+            <button class="number">3</button>
+            <button class="operator">x</button>
+            <button class="number">0</button>
+            <button class="decimal">.</button>
             <button class="bigbutt equals">=</button>
           </div>
         </div>
